added links query and model, started shorten model

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,7 @@
 <div id='container'>
   <!-- Your html here -->
+  <h1>links </h1>
+  <ul>
+    <li ng-repeat="link in links">{link}</li>
+  </ul>
 </div>
