--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,20 @@
   <body>
     <h1>Shortly</h1>
 
+    <header>
+      <nav class="navigation">
+      <div class="container">
+
+
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#links"><i class="fa fa-home"></i> Links</a></li>
+          <li><a href="#shorten"><i class="fa fa-shield"></i> Shorten</a></li>
+          <li><a href="#signin"><i class="fa fa-comment"></i> Login</a></li>
+        </ul>
+      </div>
+      </nav>
+    </header>
+
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
 
