--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -3,8 +3,8 @@
   <div id='shorten'>
     <h1>shorten</h1>
     <form name="shortenForm" ng-submit='addLink()'>
-      <input type='text'ng-model="shortly.shorten.link">
-      <div ng-model="shortly.shorten"> {{ shortly.shorten.link }}</div>
+      <input type='text'ng-model="link.url">
+      <div ng-model="shortly.shorten"> {{link.url }}</div>
       <button>shorten</button>
     </form>
   </div>
